# sensleak-rs

./: .gitignore  BUCK  Cargo.toml  LICENSE  README.md  gitleaks.toml  rules.toml
.devcontainer/: Dockerfile  devcontainer.json
examples/: test_gitleaks.toml
src/: api.rs  config.rs  custom_error.rs  detect_service.rs  error.rs  errors.rs  file_utils.rs  git_service.rs  git_util.rs  lib.rs  main.rs  models.rs
src/entity/: models.rs
src/routes/: rules.rs  scan.rs
src/service/: db_service.rs  detect_service.rs  git_service.rs  mod.rs
src/utils/: detect_utils.rs  git_util.rs  mod.rs
tests/: integration_test.rs
tests/files/: commits.txt  gitleaks.toml
tests/files/test/: world.docx
tests/files/test/.target/: file2.txt
tests/files/test/files/: file1.txt
tests/files/testDir/: test.txt
