[package]
name = "sensleak"
version = "0.2.1"
edition = "2021"

 [[bin]]
name = "scan"
path = "src/main.rs"

[[bin]]
name = "api"
path = "src/api.rs"

[dependencies]
regex = "1.5.4"
clap = { version = "4.2.4", features = ["derive"] }
toml = "0.8.0"
walkdir = "2.3.2"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
assert_cmd = "2.0.10"
tempfile = "3.2.0"
git2 = "0.18.0"
mockito = "1.0.2"
csv = "1.1"
log = "0.4"
env_logger = "0.10.0"
axum = { version = "0.6.1", features = ["headers", "macros"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["cors"] }
utoipa = { version = "3.3.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
hyper = { version = "0.14", features = ["full"] }