[package]
name = "sensleak"
version = "0.2.1"
edition = "2021"

 [[bin]]
name = "scan"
path = "src/main.rs"

[[bin]]
name = "api"
path = "src/api.rs"

[dependencies]
regex = "1.10.3"
clap = { version = "4.5.3", features = ["derive"] }
toml = "0.8.12"
walkdir = "2.5.0"
rayon = "1.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
assert_cmd = "2.0.10"
tempfile = "3.2.0"
git2 = "0.19.0"
mockito = "1.0.2"
csv = "1.1"
log = "0.4"
env_logger = "0.11.0"
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
utoipa = { version = "5.0.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
hyper = { version = "1.2.0", features = ["full"] }
postgres = { version = "0.19.7"}
sea-orm = {version = "0.12", features = ["runtime-tokio-rustls", "sqlx-postgres"]}