[package]
name = "sensleak"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "scan"
path = "src/main.rs"

[[bin]]
name = "api"
path = "src/api.rs"

[dependencies]
actix-cors = "0.7"
actix-web = "4.10"
assert_cmd = "2.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
env_logger = "0.11"
git2 = "0.20"
log = "0.4"
mockito = "1.7"
postgres = { version = "0.19" }
rayon = "1.10"
regex = "1.11"
sea-orm = { version = "1.1", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.19"
tokio = { version = "1.44", features = ["full"] }
toml = "0.8"
utoipa = { version = "5.3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web"] }
walkdir = "2.5"
zip = "=2.4.2" # !
